# unconscious-gravity

./: .gitignore  CANONICAL_COMPATIBILITY.md  CHANGELOG.md  PoR_equations.md  PoR_eval.py  PoR_eval_plan.md  PoR_eval_result.md  PoR_heuristics_v1.md  PoR_input_spec.md  PoR_logbook.md  PoR_matrix.md  PoR_summary.md  PoR_terms.md  PoR_viewer (2).ipynb  README.md  TASK.md  UGHer_derivation.md  UGHer_validation.md  design_sketch.py  main.py  metadata.json  por_inference.py  pyproject.toml  pyproject.toml.bak  requirements.txt  setup.py  spec.md  test_sample.py  ugh3-manifest.json  ugh3_metrics.py
.github/: pull_request_template.md
articles/: day1-por-spike.md  day10-summary.md  day2-delta-e-grv.md  day3-deviation-score.md  day4-mini-eval.md  day5-mini-eval.md  day6-patchwork-comparison.md  day7-safe-chat-ci.md  day8-grv-heatmap.md  day9-oss-api-comparison.md
data/: sample.csv  sample_data.csv
docs/: index.html
examples/: dummy_dialog.csv  dummy_dialog.parquet  dummy_dialog.py  run_experiment.py  simulate_PoR.py  ugh3_demo.ipynb
inference/: por_inference_v2.py
metadata/: __init__.py  semantic_index.json  semantic_index.py
models/: advanced_por_models.py  por_equations.py  por_formal_models.py  por_model.py  por_simulator.py  sample_por_example.py
por_diagnostics/: diagnostic.py
scripts/: generate_readme.py
tasks/: phase1_finish_coder.json  phase2_inference_and_cli.json  phase3_por_detector_evaluator.json  phase4_ci_docs_package.json
tests/: __init__.py  test_inference.py  test_logger.py  test_por_detector.py  test_por_diagnostic.py  test_por_model.py  (+3 more)
(+20 files in other folders)
