[project]
name = "unconscious-gravity-exp"
version = "0.0.9"
authors = [{name = "Yuu"}]
description = "PoR simulation toolkit"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["unconscious_gravity_exp"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
